# xdg-sound

./: .gitignore  .indent.pro  AUTHORS  ChangeLog  Makefile.am  NEWS  README.md  README.md.in  RELEASE.md  THANKS  TODO  configure.ac
man/: Makefile.am  xdg-play.pod  xdg-sound-list.pod  xdg-sound-whereis.pod  xdg-sound-which.pod  xdg-sound.pod
src/: .xdg-play.c.swp  Makefile.am  xdg-play.c  xdg-sound  xdg-sound-list  xdg-sound-list.c  xdg-sound-whereis  xdg-sound-whereis.c  xdg-sound-which  xdg-sound-which.c
